--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ a {
 .top-content {
   padding: 70px 0;
   font-weight: 700;
-  background: url(../img/konf.jpg) center no-repeat;
+  background: url(../img/1.jpg) center no-repeat;
   background-size: cover;
   -o-object-fit: cover;
      object-fit: cover;
@@ -139,7 +139,7 @@ a {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.3);
   top: 0;
 }
 
@@ -256,6 +256,7 @@ a {
 
 .step__link {
   display: block;
+  text-align: center;
   width: 255px;
   margin: 40px auto 0;
   color: #fff;
